[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/scene_templates/fading_scene/FadingScene.gd" type="Script" id=1]
[ext_resource path="res://fonts/staubach/Staubach.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=2]
resource_name = "FadeIn"
tracks/0/type = "bezier"
tracks/0/path = NodePath("FadeBlackRect:color:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("FadeBlackRect:color:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("FadeBlackRect:color:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("FadeBlackRect:color:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}

[node name="FadingScene" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 120
custom_constants/margin_top = 120
custom_constants/margin_left = 120
custom_constants/margin_bottom = 120
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundImage" type="TextureRect" parent="."]
margin_left = 120.0
margin_top = 120.0
margin_right = 1800.0
margin_bottom = 960.0

[node name="Caption" type="RichTextLabel" parent="."]
margin_left = 120.0
margin_top = 120.0
margin_right = 1800.0
margin_bottom = 960.0
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true

[node name="FadeAnimationPlayer" type="AnimationPlayer" parent="."]
anims/FadeIn = SubResource( 2 )

[node name="FadeBlackRect" type="ColorRect" parent="."]
margin_left = 120.0
margin_top = 120.0
margin_right = 1800.0
margin_bottom = 960.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FadeOutTimer" type="Timer" parent="."]
one_shot = true
[connection signal="animation_finished" from="FadeAnimationPlayer" to="." method="_on_FadeAnimationPlayer_animation_finished"]
[connection signal="timeout" from="FadeOutTimer" to="." method="_on_FadeOutTimer_timeout"]
